teste de commit após git push direto

--- a/frontend/src/app/components/template/nav/nav.component.css
+++ b/frontend/src/app/components/template/nav/nav.component.css
@@ -1,5 +1,5 @@
 .sidenav {
-    background-color: #3F51B5;
+    background-color: #DE4636;
 }
 
 .sidenav a {
@@ -8,4 +8,9 @@
 
 .sidenav i {
     padding-right: 10px;
+}
+
+.content {
+    padding:16px;
+    background-color:#FFF;
 }
