--- a/frontend/src/app/views/product-crud/product-crud.component.html
+++ b/frontend/src/app/views/product-crud/product-crud.component.html
@@ -1,1 +1,5 @@
-<h1>Funcionou</h1>
+<button mat-raised-button (click)="navigateToProductCreate()" color="primary">
+    Novo Produto
+</button>
+
+<app-product-read></app-product-read>
