ultimo commit na branch principal

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -11,6 +11,11 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     vertical-align: middle;
 }
 
-/* .mat-typography {
-    background-color:#F39F8B;
-} */
+.msg-success {
+    background-color: #28a745;
+    color: #fff;
+}
+.msg-error {
+    background-color: #e35e6b;
+    color: #fff;
+}
